--- a/Visitor.Shopping.Cart/Visitor.Shopping.Cart/Visitor.Shopping.Cart.csproj
+++ b/Visitor.Shopping.Cart/Visitor.Shopping.Cart/Visitor.Shopping.Cart.csproj
@@ -7,4 +7,8 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ElementLib\ElementLib.csproj" />
+    </ItemGroup>
+
 </Project>
